# beer

./: DESCRIPTION  NAMESPACE  README.md  configure  configure.ac
R/: RcppExports.R  bee.R  zzz.R
src/: RcppExports.cpp  bee.cpp
src/3dparty/bee-c/: .gitignore  .gitmodules  .travis.yml  README.rst
src/3dparty/bee-c/beer/: CMakeLists.txt  beer_assoc.c  beer_auth.c  beer_buf.c  beer_call.c  beer_delete.c  beer_insert.c  beer_io.c  beer_iob.c  beer_iter.c  beer_mem.c  beer_net.c  beer_object.c  beer_opt.c  beer_ping.c  beer_proto_internal.h  beer_reply.c  beer_request.c  beer_schema.c  beer_select.c  beer_stream.c  beer_update.c
src/3dparty/bee-c/beerrpl/: beer_snapshot.h  beer_xlog.h
src/3dparty/bee-c/doc/output/: buffering.html  connection.html  genindex.html  index.html  msgpackobject.html  objects.inv  reply.html  request.html  request_builder.html  schema.html  search.html  searchindex.js  stream.html
src/3dparty/bee-c/doc/source/: buffering.rst  conf.py  connection.rst  example.c  index.rst  msgpackobject.rst  reply.rst  request.rst  request_builder.rst  schema.rst  stream.rst
src/3dparty/bee-c/include/: tp.h
src/3dparty/bee-c/include/bee/: bee.h  beer_auth.h  beer_call.h  beer_io.h  beer_iob.h  beer_net.h  beer_object.h  beer_proto.h  beer_request.h  beer_select.h  beer_stream.h  beer_update.h
src/3dparty/bee-c/rpm/: bee-c.spec
src/3dparty/bee-c/test/: CMakeLists.txt  bee_tcp.c  bee_unix.c  beer_assoc.c  common.c  common.h  plain_test.c  test-run.py
tests/testthat/: test-binary-data.R  test-call.R  test-connect.R  test-delete.R  test-eval.R  test-insert.R  test-replace.R  test-select.R  test-update.R  test-upsert.R
